--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <span id="count">0</span>
     </div>
     <button id="btn-plus">+1</button>
+    <button id="btn-moins">-1</button>
     <button id="btn-reset">Reset</button>
+    <script src="script.js"></script>
 </body>
 </html>
