--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button id="btn-plus">+1</button>
     <button id="btn-moins">-1</button>
     <button id="btn-reset">Reset</button>
+    <br>
+    <button id="btn-theme">Mode sombre</button>
     <script src="script.js"></script>
 </body>
 </html>
